# rmt-financial-covariance

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: fetch.py
notebooks/: analysis.ipynb
src/rmt/: __init__.py  covariance.py  denoising.py  marchenko_pastur.py  portfolio.py
tests/: test_covariance.py  test_denoising.py  test_marchenko_pastur.py
