[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmt-financial-covariance"
version = "0.1.0"
description = "Random Matrix Theory denoising of financial covariance matrices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "yfinance>=0.2",
    "pyarrow>=12.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
